# coveralls_sample

./: CMakeLists.txt  README.md  avr_cross_compile.cmake  build_install.sh  clang_cross_compile.cmake  compile_commands.json  generate_clagd_json.sh
.clangd/index/: gtest-death-test-internal.h.C40C2FAB53B09480.idx  gtest-death-test.h.0DB551D9CBD23313.idx  gtest-filepath.h.B9C26FB4CC9F146D.idx  gtest-internal.h.C31EA68B543F59F5.idx  gtest-linked_ptr.h.790F7683A9494333.idx  gtest-message.h.A35EDE20E910735C.idx  gtest-param-test.h.FC2280C8219C4612.idx  gtest-param-util-generated.h.366DF3B4608AAE35.idx  gtest-param-util.h.484ED5C6FA780F8F.idx  gtest-port-arch.h.5C8BC9950FC2A25F.idx  gtest-port.h.9D63CE0A2B6BC430.idx  gtest-port.h.F804A101AEEEA47C.idx  gtest-printers.h.037A8816FAA11E49.idx  gtest-printers.h.6140DCF4950C9AB8.idx  gtest-string.h.52A1C2F5008F7E43.idx  gtest-test-part.h.6E797B1B1102B70F.idx  gtest-type-util.h.FFC46B340A823EB1.idx  gtest-typed-test.h.BFCF047ABAA26EC6.idx  gtest.h.3598622E7F8B870E.idx  gtest_pred_impl.h.F520EB130FC81E37.idx  gtest_prod.h.3B206239DCECDD80.idx  main.cpp.DBBF62034521DC39.idx  main.cpp.FA0C4868E34B9C17.idx  mymath.cpp.51D730637F95247C.idx  mymath.hpp.A2D1032684C50B7A.idx  test1.cpp.2AA77218D57C2669.idx  test2.cpp.EA1D618C6E190EE4.idx
.github/workflows/: build_test.sh  cpp-workflow.yml
cli/: CMakeLists.txt  main.c  main.cpp
gtest/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
include/driver/: CMakeLists.txt
include/mymath/: CMakeLists.txt  mymath.h
src/: CMakeLists.txt  mymath.c  mymath.cpp
src/driver/: CMakeLists.txt
src/mymath/: CMakeLists.txt
test/: CMakeLists.txt  test1.cpp  test2.cpp
test/host/: CMakeLists.txt  test1.cpp
unity/lib/cmake/unity/: unityConfigVersion.cmake
